# Verilog

./: .gitignore
counter/: CMakeLists.txt  counter.sv  counter_bench.sv  gen_counter.py
gate/: CMakeLists.txt  Makefile  filelist  gatebench.sv  gates.sv  tb.sv
instructions/: CMakeLists.txt  instructions.sv  instructions_bench.sv  instructions_test.sv  util.sv
memory/: gen_memory.py  memory.sv  memory_bench.sv  util.sv
multiplexers/: gen_test.py  muxes.sv  muxes_bench.sv  vcs.txt  verilator.txt
random/: CMakeLists.txt  random.sv
task1/: CMakeLists.txt  gatebench-all.sv  gen_test.py  tests.txt
task2/: CMakeLists.txt  gen_test.py  muxes.sv  muxes_bench.sv
task3/: CMakeLists.txt  srlatch_bench.sv  srlatches.sv  util.sv
